fixing the gaps between boxes

--- a/css/main.scss
+++ b/css/main.scss
@@ -45,7 +45,6 @@ body {
 
 .flex-container {
   max-width: 1440px;
-  height: 100%;
   display: inline-flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -67,7 +66,12 @@ body {
   gap: 1.5rem;
 }
 
-@media (min-width: 767px) {
+@media (max-width: 767px) {
+  .flex-container {
+    gap: 1.5rem;
+  }
+}
+@media (min-width: 768px) {
   .flex-container {
     margin: 4.385rem;
   }
